@@ -2,6 +2,7 @@ udotool (1.6) UNRELEASED; urgency=medium
 
   * NEW: Wait for settle time after device setup.
   * NEW: Option `--settle-time` to specify device settle time.
+  * NEW: Use environment variables to override some defaults.
 
  -- Alec Kojaev <alec.kojaev@gmail.com>  Sun, 13 Oct 2024 23:41:37 +0300
 
